--- a/Hur många versaler/Hur många versaler/Hur många versaler.csproj
+++ b/Hur många versaler/Hur många versaler/Hur många versaler.csproj
@@ -58,6 +58,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Default.aspx" />
+    <Content Include="ErrorMessage.html" />
+    <Content Include="Style.css" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
