Rättat till "Rensa"-knappen.

--- a/Hur många versaler/Hur många versaler/Hur många versaler.csproj
+++ b/Hur många versaler/Hur många versaler/Hur många versaler.csproj
@@ -60,7 +60,9 @@
     <Content Include="Default.aspx" />
     <Content Include="ErrorMessage.html" />
     <Content Include="Style.css" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Default.aspx.cs">
